# LucyHubClient

./: .gitignore  README.md  config.py  lucywebview.py  main.py  pyproject.toml  requirements.txt  run.sh  speech.py  voice.py
lucywebview/: pywebview.py  selenium.py
models/request-classifier/: README.md  adapter_config.json  trainer_state.json
speech/detect_speech_provider/: wake_word.py
speech/request_classifier/: bert.py
src/LucyHubClient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lucyhubclient/: __main__.py  client.py  config.py  selenium.py  socket_webview.py  sound.py
src/lucyhubclient/lucywebview/: pywebview.py  selenium.py
src/lucyhubclient/models/request-classifier/: rng_state.pth  scaler.pt  scheduler.pt
src/lucyhubclient/speech/: __init__.py  voice_assistant.py
src/lucyhubclient/speech/detect_speech_provider/: vad.py  wake_word.py
src/lucyhubclient/speech/request_classifier/: bert.py  none.py
src/lucyhubclient/speech/transcription_provider/: parakeet.py
src/lucyhubclient/templates/: background.html  config.html  index.html
src/lucyhubclient/tools/: clock.py  lucy_client_module.py  spotify.py
src/lucyhubclient/voice/: elevenlabs.py  kokoro.py
templates/: background.html  index.html
tools/: clock.py  lucy_client_module.py  spotify.py
voice/: quiet.py
