[project]
name = "LucyHubClient"
version = "0.0.1a"
description = "A smart home hub client for LucyServer."
requires-python = ">=3.10"
dependencies = [
    "asyncio",
    "websockets",
    "pyaudio",
    "numpy",
    "requests",
    "torch",
    "torchaudio",
    "websockets",
    "scipy",
    "pyyaml",
    "openwakeword",
    "silero-vad",
    "webdriver_manager",
    "flask",
    "qrcode[pil]",
    "rich"
]

[tool.setuptools.package-data]
"lucyhubclient.sounds" = ["*.wav"]
"lucyhubclient.templates" = ["*.html"]
"lucyhubclient.tools.clock_util" = ["*.wav"]