[project]
name = "LucyHubClient"
version = "0.0.1a"
description = "A smart home hub client for LucyServer."
requires-python = ">=3.10"
dependencies = [
    "asyncio",
    "websockets",
    "pyaudio",
    "numpy",
    "requests",
    "soundfile",
    "pyyaml",
    "openwakeword",
    "flask",
    "qrcode[pil]",
    "rich"
]

[tool.setuptools.package-data]
"lucyhubclient.sounds" = ["*.wav"]
"lucyhubclient.templates" = ["*.html"]
"lucyhubclient.tools.clock_util" = ["*.wav"]
"lucyhubclient.speech.detect_speech_provider" = ["*.onnx"]